--- a/Pages/about.html
+++ b/Pages/about.html
@@ -1,63 +1,152 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eleve Flowers Where Petals Meet Elegence</title>
+    <title>About Us - Eleve Flowers</title>
+     <link rel="stylesheet" href="/css/styles.css">
 </head>
-        <!--Navigation-->
-
-<body style="background-color: beige;">
+<body background="/Assests/Back ground.jpg">
     <header>
-        <img src="../Assests/Logo.jpg" alt="Eleve Flowers Logo" width="200" height="200">
-        
-        <nav>
-            <a href="../index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="contact.html">Contact Us</a>
-            <a href="products.html">Products</a>
-        </nav> 
+        <div class="header-content">
+            <img src="/Assests/Logo.jpg" alt="Eleve Flowers Logo" class="logo" width="120" height="120">
+         <nav style="margin-top: 15px;">
+            <a href="../index.html" style="margin: 0 15px; text-decoration: none; color: blueviolet; font-weight: bold;">Home</a>
+            <a href="about.html" style="margin: 0 15px; text-decoration: none; color: blueviolet; font-weight: bold;">About Us</a>
+            <a href="services.html" style="margin: 0 15px; text-decoration: none; color: blueviolet; font-weight: bold;">Services</a>
+            <a href="enquiry.html" style="margin: 0 15px; text-decoration: none; color: blueviolet; font-weight: bold;">Enquiry</a>
+            <a href="contact.html" style="margin: 0 15px; text-decoration: none; color: blueviolet; font-weight: bold;">Contact</a>
+        </nav>    
+        </div>
     </header>
-    <!--Knowing more about us-->
+
     <main>
-        <h1 style="color:blueviolet;">ABOUT US:</h1>
-        <p>At Eleve Flowers, we believe that flowers are more than just petals and stems, they are emotions wrapped in nature's beauty.
-            Founded in the heart of Polokwane, our passion for floral artistry has blossomed into a brand known for luxury, freshness, and unforgettable design.
-             We are a premium floral design business specializing in hancrafted bouquets and arrangements for every occasion from weddings and anniversaries to birthdays, corporate events, and more</p>
-        <h3>Our Story:</h3>
-        <p>Born out of a passion for floral artistry, Eleve Flowers has grown from a small idea into a blossoming brand.
-           What started as an Instagram page showcasing unique arrangements has now become a trusted name for elegant and
-           fresh floral designs. With our rapidly growing online community, we are now expangding to a dedicated website,
-           bringing beauty and convenience directly to your fingertips. The founder of Eleve Flowers is Shandu Mathebula who tells a story over a bouquet.
-        </p>
-        <h3>Our Mission:</h3>
-        <p>"To elevate the senses through handcrafed floral experiences, blendling artistic expression with the freshness of nature."</p>
-        <h3>Why Choose Us:</h3>
-        <ul>
-            <li>Handpicked Freshness - Every bloom is carefully selected for quality and long-lasting beauty.</li>
-            <li>Artistry in Every Arrangement - Our florists blend creativity with elegance to design bouquets that truly stand out.</li>
-            <li>Eco-Friendly Elegance - We use sustainable packaging that's as kind to the earth as it is beautiful to the eye.</li>
-            <li>Tailored Just for You - From custom wedding themes to personal "thank-you" bouquets, every order reflects your story.</li>
-            <li>Same-Day Delivery - Because love, joy, and surprise shouldn't have to wait.</li>
-            <li>Trusted Service -With a growing family of loyal customers and glowing reviews, we've become Polokwane's go-to for floral magic.</li>
-            <li>Convenience - Order online, explore our services, and connect with us easily.</li>
-        </ul>
-        <h3>Meet Our Team:</h3>
-        <p> At Eleve Flowers, our greatest strength isn"t just the flowers we arrange it is the people who bring them to life.
-            Behind every bouquet is a pasionate team of designers dedicated to turning our moments into lasting memories.            
-            We pride ourselves on personal service, ensuring every client feels valued and celebrated.
-        </p>
-         <ul>
-            <li>Our Florists - Skilled artisans who blend colors, textures, and fragrances into breathtaking arrangements.</li>
-            <li>Our Event Stylists - Experts in transforming spaces with floral decor that captures the heart of every celebration.</li>
-            <li>Our Customer Care Team</li>
-            <li>OurDelivery Heroes </li>
-         </ul>
-         <p>Together, we are more than a team - we are a family united by creativity, love for nature, and the joy of making life's momemts bloom.</p>     
+        <h1 class="page-title">About Eleve Flowers</h1>
+        
+        <!-- Founder Section -->
+        <div class="content-box">
+            <h2 class="section-title">Meet Our Founder</h2>
+            <div style="display: flex; flex-wrap: wrap; gap: 30px; align-items: center; margin: 20px 0;">
+                <div style="flex: 1; min-width: 250px; text-align: center;">
+                    <img src="/Assests/Founder.jpeg" alt="Founder of Eleve Flowers" style="width: 100%; max-width: 300px; border-radius: 10px; margin: 0 auto;">
+                    <p style="margin-top: 10px; font-style: italic;">Sarah Johnson - Founder & Head Florist</p>
+                </div>
+                <div style="flex: 2; min-width: 300px;">
+                    <p>Sarah Johnson founded Eleve Flowers in 2020 with a passion for bringing beauty into everyday life through floral artistry. With over 10 years of experience in floral design, Sarah's vision was to create a floral boutique that combines elegance with personal touch.</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Our Story Section -->
+        <div class="content-box">
+            <h2 class="section-title">Our Story</h2>
+            <div style="display: flex; flex-wrap: wrap; gap: 30px; align-items: center; margin: 20px 0;">
+                <div style="flex: 1; min-width: 300px;">
+                    <p>Eleve Flowers was born from Sarah's childhood memories of her grandmother's garden. The name "Eleve" (meaning "elevated" in French) reflects our commitment to creating floral arrangements that elevate special moments and transform ordinary days into extraordinary memories.</p>
+                    <p>What started as a small home-based business has grown into Polokwane's premier floral destination, serving weddings, events, and daily floral needs with the same passion and attention to detail that inspired our beginning.</p>
+                </div>
+                <div style="flex: 1; min-width: 250px; text-align: center;">
+                    <img src="/Assests/Flower 5.jpeg" alt="The inspiration behind Eleve Flowers" style="width: 100%; max-width: 300px; border-radius: 10px; margin: 0 auto;">
+                    <p style="margin-top: 10px; font-style: italic;">The garden that started it all</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Our Inspiration Section -->
+        <div class="content-box">
+            <h2 class="section-title">What Inspires Us</h2>
+            <div class="image-gallery">
+                <div class="gallery-item">
+                    <img src="/Assests/Flower 4.jpeg" alt="Nature inspiration">
+                    <div class="gallery-caption">The Beauty of Nature</div>
+                </div>
+                <div class="gallery-item">
+                    <img src="/Assests/Flower 6.jpeg" alt="Seasonal flowers">
+                    <div class="gallery-caption">Seasonal Blooms</div>
+                </div>           
+            </div>
+            <p>We draw inspiration from:</p>
+            <ul>
+                <li><strong>Nature's Palette:</strong> The changing seasons and natural beauty around us</li>
+                <li><strong>Client Stories:</strong> The special moments we help celebrate</li>
+                <li><strong>Local Community:</strong> Supporting South African flower growers</li>
+                <li><strong>Creative Innovation:</strong> Pushing boundaries in floral design</li>
+            </ul>
+        </div>
+
+        <!-- Customer Treatment Section -->
+        <div class="content-box">
+            <h2 class="section-title">Our Approach to Customer Care</h2>
+            <div style="display: flex; flex-wrap: wrap; gap: 30px; margin: 20px 0;">
+                <div style="flex: 2; min-width: 300px;">
+                    <p>At Eleve Flowers, we believe every customer deserves exceptional treatment:</p>
+                    <ul>
+                        <li><strong>Personal Consultations:</strong> One-on-one meetings to understand your vision</li>
+                        <li><strong>Quality Guarantee:</strong> Only the freshest, most beautiful flowers</li>
+                        <li><strong>Flexible Services:</strong> Custom arrangements for every budget</li>
+                        <li><strong>After-Sales Support:</strong> We're here even after your event</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <!-- Our Team Section -->
+        <div class="content-box">
+            <h2 class="section-title">Meet Our Team</h2>
+            <div class="image-gallery">
+                <div class="gallery-item">
+                    <img src="/Assests/Worker.jpeg" alt="Young Florist">
+                    <div class="gallery-caption">
+                        <strong>Thato Malatjie</strong><br>
+                        Young Florist<br>
+                        2 years experience
+                    </div>
+                </div>
+                <div class="gallery-item">
+                    <img src="/Assests/SPECIALIST.jpeg" alt="Wedding Specialist">
+                    <div class="gallery-caption">
+                        <strong>Maria Wilson</strong><br>
+                        Wedding Specialist<br>
+                        10 years experience
+                    </div>
+                </div>
+                <div class="gallery-item">
+                    <img src="/Assests/EMPLOYEE.jpeg" alt=" Young Customer Relations">
+                    <div class="gallery-caption">
+                        <strong>Brenden Malatjie</strong><br>
+                        Young Customer Relations<br>
+                        1 years experience
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Why Choose Us Section -->
+        <div class="content-box">
+            <h2 class="section-title">Why Choose Eleve Flowers?</h2>
+            <div class="contact-methods">
+                <div class="contact-method">
+                    <div class="contact-icon">🌿</div>
+                    <h3>Freshness Guaranteed</h3>
+                    <p>Daily deliveries from local growers ensure the freshest flowers</p>
+                </div>
+                <div class="contact-method">
+                    <div class="contact-icon">💝</div>
+                    <h3>Personal Touch</h3>
+                    <p>Custom designs tailored to your specific needs and preferences</p>
+                </div>
+                <div class="contact-method">
+                    <div class="contact-icon">🚚</div>
+                    <h3>Reliable Delivery</h3>
+                    <p>On-time delivery with careful handling of your arrangements</p>
+                </div>
+            </div>
+        </div>
+
     </main>
-    <!--Footer-->
+
     <footer>
-        <p style="text-align: center;">&copy; 2025 WHERE PETALS MEET ELEGANCE. All rights reserved.</p>
-     </footer>
+        <p>&copy; 2025 Eleve Flowers - Where Petals Meet Elegance. All rights reserved.</p>
+    </footer>
 </body>
 </html>
