--- a/index.html
+++ b/index.html
@@ -1,42 +1,50 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eleve Flowers Where Petals Meet Elegence</title>
+    <title>Eleve Flowers - Home</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
-        <!--Navigation-->
-
-<body style="background-color:beige;">
+<body background="/Assests/Back ground.jpg">
     <header>
-        <img src="/Assests/Logo.jpg" alt="Eleve Flowers Logo" width="200" height="200">
-    
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="/Pages/about.html">About Us</a>
-            <a href="/Pages/contact.html">Contact Us</a>
-            <a href="/Pages/products.html">Products</a>
+        <div class="header-content">
+            <img src="/Assests/Logo.jpg" alt="Eleve Flowers Logo" class="logo" width="120" height="120">
+              <nav style="margin-top: 15px;">
+            <a href="/index.html" style="margin: 0 15px; text-decoration: none; color:blueviolet; font-weight: bold;">Home</a>
+            <a href="/Pages/about.html" style="margin: 0 15px; text-decoration: none; color:blueviolet; font-weight: bold;">About Us</a>
+            <a href="/Pages/services.html" style="margin: 0 15px; text-decoration: none; color:blueviolet; font-weight: bold;">Services</a>
+            <a href="/Pages/enquiry.html" style="margin: 0 15px; text-decoration: none; color:blueviolet; font-weight: bold;">Enquiry</a>
+            <a href="/Pages/contact.html" style="margin: 0 15px; text-decoration: none; color:blueviolet; font-weight: bold;">Contact</a>
         </nav>
+        </div>
     </header>
+
     <main>
-        <!--Introduction-->
-        <h1 style="color:blueviolet; text-align:center">WELCOME TO ELEVE FLOWERS WHERE PETALS MEET ELEGENCE</h1>
-        <p style="text-transform:capitalize; font-weight: bold;"> 
-          Eleve Flowers is a premium floral design business. Where every bloom tells a story.
+        <h1 class="page-title">Welcome to Eleve Flowers</h1>
+        
+        <div class="content-box">
+            <h2 class="section-title">Where Petals Meet Elegance</h2>
+            <p> Eleve Flowers is a premium floral design business. Where every bloom tells a story.
           Discover our exquisite collection of handcrafted floral arrangements, designed to elevate your moments and leave a lasting impression.
           The company specialists in creating unique, hancrafted bouquets and flower arrangements for a range of occasions.
           We believe that flowers are more than just petals and stems they're a language of love, a symbol of celebrattion,
           and a whisper of comfort. Our blooms are carefully hancrafted to bring your momemts to life, whether it's a wedding,
           a milestone, or simply a Tuesday that needs a little brightening. Explore our seasonal collections, each on a reflection
-          of nature's beauty and our passion for floral art.
-        </p>
-        <section>
-            <img src="/Assests/WhatsApp Image 2025-08-20 at 14.11.53_c7719edb.jpg" alt="My Image" width="100%" height="100%">
-        </section>
+          of nature's beauty and our passion for floral art.</p>
+        </div>
+
+        <div class="content-box">
+            <h2 class="section-title">Featured Arrangement</h2>
+            <div style="text-align: center;">
+                <img src="/Assests/Flower 2.jpg"  height= "100% " width="100%" Flower Arrangement" style="max-width: 100%; height: auto; border-radius: 5px;">
+            </div>
+        </div>
+
     </main>
-    <!--Footer-->
+
     <footer>
-        <p style="text-align: center;">&copy; 2025 WHERE PETALS MEET ELEGANCE. All rights reserved.</p>
-     </footer>
+        <p>&copy;  2025 Eleve Flowers - Where Petals Meet Elegance. All rights reserved.</p>
+    </footer>
 </body>
 </html>
